--- a/404.html
+++ b/404.html
@@ -16,19 +16,56 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-NLJKSRX');</script>
+	<!-- End Google Tag Manager -->
 </head>
 <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NLJKSRX"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<div class="wrapper">
 		<div class="content">
 			<header>
 				<a href="index.html" class="logo">
 					<img src="img/logo.png" alt="">
 				</a>
+				<div class="menu">
+					<a href="#!" class="burger"></a>
+					<nav class="menu-links">
+						<a href="index.html" class="menu-link">Главная</a>
+						<a href="/Rules.pdf" class="menu-link" target="_blank">Правила</a>
+						<a href="winners.html" class="menu-link">Победители</a>
+						<a href="faq.html" class="menu-link">Вопрос-ответ</a>
+						<a href="edadeal://cashbackjson=%7B%22section%22%3A%22index%22%2C%22params%22%3A%7B%22segment%22%3A%22Кондитерские%20изделия%22%7D%D" class="btn menu-btn">
+							<svg width="107" height="36" viewBox="0 0 107 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+							    <g filter="url(#filter0_d)">
+							        <path fill-rule="evenodd" clip-rule="evenodd" d="M3.70775 2.75966C2.23156 7.24016 0.0523678 28.0738 5.46008 30.2378C15.2032 34.1368 70.7979 30.2487 99.3932 30.9282C109.113 31.1598 107.574 2.94214 105.289 1.35967C101.271 -1.42124 50.8124 1.01376 35.9423 0.482635C23.3918 0.0345853 4.92046 -0.921437 3.70775 2.75966Z" fill="#FFD11E" />
+							    </g>
+							</svg>
+							<span>Загрузи чеки</span>
+						</a>
+					</nav>
+				</div>
 				<div class="action"></div>
 			</header>
-			<section class="main-page plug-page">
-				<div class="container">
-					<div class="kv kv-plug"></div>
+			<section class="error-page">
+				<div class="error-img img-404"></div>
+				<div class="btn-wrap error-btn-wrap">
+					<a href="index.html" class="btn">
+						<svg width="200" height="54" viewBox="0 0 200 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+						    <g filter="url(#filter1_d)">
+						        <path fill-rule="evenodd" clip-rule="evenodd" d="M5.22033 4.13948C2.43666 10.8602 -1.67268 42.1107 8.52472 45.3567C26.8974 51.2052 131.733 45.373 185.656 46.3924C203.985 46.7396 201.082 4.41322 196.773 2.0395C189.197 -2.13186 94.0462 1.52064 66.0055 0.723953C42.3389 0.0518779 7.50715 -1.38215 5.22033 4.13948Z" fill="#FFD11E" />
+						    </g>
+						</svg>
+						<span>На главную</span>
+					</a>
 				</div>
 			</section>
 		</div>
@@ -43,7 +80,7 @@
 					</div>
 					<div class="footer-links">
 						<a href="https://ru.mondelezinternational.com/privacy-policy" class="link" target="_blank">Политика конфиденциальности</a>
-						<a href="#!" class="link" target="_blank">Правила акции</a>
+						<a href="/Rules.pdf" class="link" target="_blank">Правила акции</a>
 						<a href="https://ru.mondelezinternational.com/legal-notices" class="link" target="_blank">Пользовательское соглашение</a>
 					</div>
 					<div class="copyright">ООО «Мон’дэлис Русь». Часть группы компаний Mondelēz International. Все права защищены.</div>
@@ -83,7 +120,6 @@
 	<script src="libs/jquery.validate.min.js"></script>
 	<script src="libs/scrollbar/jquery.scrollbar.min.js"></script>
 	<script src="libs/jquery.inputmask.min.js"></script>
-	<script src="libs/jquery.countdown.min.js"></script>
 	<script src="js/scripts.js"></script>
 </body>
 </html>
