--- a/winners.html
+++ b/winners.html
@@ -16,19 +16,97 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-NLJKSRX');</script>
+	<!-- End Google Tag Manager -->
 </head>
 <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NLJKSRX"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<div class="wrapper">
 		<div class="content">
 			<header>
 				<a href="index.html" class="logo">
 					<img src="img/logo.png" alt="">
 				</a>
+				<div class="menu">
+					<a href="#!" class="burger"></a>
+					<nav class="menu-links">
+						<a href="index.html" class="menu-link">Главная</a>
+						<a href="/Rules.pdf" class="menu-link" target="_blank">Правила</a>
+						<a href="winners.html" class="menu-link active">Победители</a>
+						<a href="faq.html" class="menu-link">Вопрос-ответ</a>
+						<a href="edadeal://cashbackjson=%7B%22section%22%3A%22index%22%2C%22params%22%3A%7B%22segment%22%3A%22Кондитерские%20изделия%22%7D%D" class="btn menu-btn">
+							<svg width="107" height="36" viewBox="0 0 107 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+							    <g filter="url(#filter0_d)">
+							        <path fill-rule="evenodd" clip-rule="evenodd" d="M3.70775 2.75966C2.23156 7.24016 0.0523678 28.0738 5.46008 30.2378C15.2032 34.1368 70.7979 30.2487 99.3932 30.9282C109.113 31.1598 107.574 2.94214 105.289 1.35967C101.271 -1.42124 50.8124 1.01376 35.9423 0.482635C23.3918 0.0345853 4.92046 -0.921437 3.70775 2.75966Z" fill="#FFD11E" />
+							    </g>
+							</svg>
+							<span>Загрузи чеки</span>
+						</a>
+					</nav>
+				</div>
 				<div class="action"></div>
 			</header>
-			<section class="main-page plug-page">
+			<section class="inner-page">
 				<div class="container">
-					<div class="kv kv-plug"></div>
+					<div class="inner-title winners-title">Победители</div>
+					<div class="filters">
+						<div class="date-filter">
+							<div class="select">
+								<select name="theme" data-placeholder="Даты">
+									<option value=""></option>
+									<option value="1">01.09 - 07.09</option>
+									<option value="2">08.09 - 14.09</option>
+									<option value="3">15.09 - 21.09</option>
+									<option value="4">22.09 - 30.09</option>
+								</select>
+							</div>
+						</div>
+						<form class="input-field phone-filter">
+                    		<input type="text" name="phone" class="phone-mask" placeholder="Поиск по номеру телефона" required="">
+                    		<button class="search"></button>
+                    	</form>
+					</div>
+					<div class="table-wrapper winners-table">
+						<table>
+							<thead>
+								<tr>
+									<th class="desktop-visible">Имя</th>
+									<th class="desktop-visible">Телефон</th>
+									<th class="desktop-visible">Дата</th>
+									<th class="mobile-visible">Победитель</th>
+									<th>Приз</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td class="desktop-visible">
+										<img src="img/waiting.svg" alt="">
+									</td>
+									<td class="desktop-visible">
+										<img src="img/waiting.svg" alt="">
+									</td>
+									<td class="desktop-visible">
+										<img src="img/waiting.svg" alt="">
+									</td>
+									<td class="mobile-visible">
+										<img src="img/waiting.svg" alt="">
+									</td>
+									<td>
+										<img src="img/waiting.svg" alt="">
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</section>
 		</div>
@@ -43,7 +121,7 @@
 					</div>
 					<div class="footer-links">
 						<a href="https://ru.mondelezinternational.com/privacy-policy" class="link" target="_blank">Политика конфиденциальности</a>
-						<a href="#!" class="link" target="_blank">Правила акции</a>
+						<a href="/Rules.pdf" class="link" target="_blank">Правила акции</a>
 						<a href="https://ru.mondelezinternational.com/legal-notices" class="link" target="_blank">Пользовательское соглашение</a>
 					</div>
 					<div class="copyright">ООО «Мон’дэлис Русь». Часть группы компаний Mondelēz International. Все права защищены.</div>
@@ -83,7 +161,6 @@
 	<script src="libs/jquery.validate.min.js"></script>
 	<script src="libs/scrollbar/jquery.scrollbar.min.js"></script>
 	<script src="libs/jquery.inputmask.min.js"></script>
-	<script src="libs/jquery.countdown.min.js"></script>
 	<script src="js/scripts.js"></script>
 </body>
 </html>
