--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,7 @@
 						<a href="/Rules.pdf" class="menu-link" target="_blank">Правила</a>
 						<a href="winners.html" class="menu-link">Победители</a>
 						<a href="faq.html" class="menu-link active">Вопрос-ответ</a>
-						<a href="edadeal://cashbackjson=%7B%22section%22%3A%22index%22%2C%22params%22%3A%7B%22segment%22%3A%22Кондитерские%20изделия%22%7D%D" class="btn menu-btn">
+						<a href="edadeal://cashback?json=%7B%22section%22%3A%22index%22%2C%22params%22%3A%7B%22segment%22%3A%22%D0%9A%D0%BE%D0%BD%D0%B4%D0%B8%D1%82%D0%B5%D1%80%D1%81%D0%BA%D0%B8%D0%B5%20%D0%B8%D0%B7%D0%B4%D0%B5%D0%BB%D0%B8%D1%8F%22%7D%7D" class="btn menu-btn">
 							<svg width="107" height="36" viewBox="0 0 107 36" fill="none" xmlns="http://www.w3.org/2000/svg">
 							    <g filter="url(#filter0_d)">
 							        <path fill-rule="evenodd" clip-rule="evenodd" d="M3.70775 2.75966C2.23156 7.24016 0.0523678 28.0738 5.46008 30.2378C15.2032 34.1368 70.7979 30.2487 99.3932 30.9282C109.113 31.1598 107.574 2.94214 105.289 1.35967C101.271 -1.42124 50.8124 1.01376 35.9423 0.482635C23.3918 0.0345853 4.92046 -0.921437 3.70775 2.75966Z" fill="#FFD11E" />
