--- a/winners-no-winners.html
+++ b/winners-no-winners.html
@@ -88,179 +88,20 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td class="desktop-visible">Александр Р.</td>
-									<td class="desktop-visible">+7 (***) ***-4563</td>
-									<td class="desktop-visible">10.07.2020</td>
+									<td class="desktop-visible">
+										<img src="img/waiting.svg" alt="">
+									</td>
+									<td class="desktop-visible">
+										<img src="img/waiting.svg" alt="">
+									</td>
+									<td class="desktop-visible">
+										<img src="img/waiting.svg" alt="">
+									</td>
 									<td class="mobile-visible">
-										<div class="winner-info">
-											<div class="winner-name">Александр Р.</div>
-											<div>
-												+7 (***) ***-4563 <br>
-												10.07.2020
-											</div>
-										</div>
+										<img src="img/waiting.svg" alt="">
 									</td>
 									<td>
-										<div class="win-info">
-											<div class="win-img">
-												<img src="img/prizes/lamoda.png" alt="">
-											</div>
-											<span>Сертификат Lamoda <br>на 1000₽</span>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td class="desktop-visible">Александр Р.</td>
-									<td class="desktop-visible">+7 (***) ***-4563</td>
-									<td class="desktop-visible">10.07.2020</td>
-									<td class="mobile-visible">
-										<div class="winner-info">
-											<div class="winner-name">Александр Р.</div>
-											<div>
-												+7 (***) ***-4563 <br>
-												10.07.2020
-											</div>
-										</div>
-									</td>
-									<td>
-										<div class="win-info">
-											<div class="win-img">
-												<img src="img/prizes/sportmaster.png" alt="">
-											</div>
-											<span>Сертификат Спортмастер <br>на 1000₽</span>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td class="desktop-visible">Александр Р.</td>
-									<td class="desktop-visible">+7 (***) ***-4563</td>
-									<td class="desktop-visible">10.07.2020</td>
-									<td class="mobile-visible">
-										<div class="winner-info">
-											<div class="winner-name">Александр Р.</div>
-											<div>
-												+7 (***) ***-4563 <br>
-												10.07.2020
-											</div>
-										</div>
-									</td>
-									<td>
-										<div class="win-info">
-											<div class="win-img">
-												<img src="img/prizes/ozon.png" alt="">
-											</div>
-											<span>Сертификат OZON <br>на 1000₽</span>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td class="desktop-visible">Александр Р.</td>
-									<td class="desktop-visible">+7 (***) ***-4563</td>
-									<td class="desktop-visible">10.07.2020</td>
-									<td class="mobile-visible">
-										<div class="winner-info">
-											<div class="winner-name">Александр Р.</div>
-											<div>
-												+7 (***) ***-4563 <br>
-												10.07.2020
-											</div>
-										</div>
-									</td>
-									<td>
-										<div class="win-info">
-											<div class="win-img">
-												<img src="img/prizes/ivi.png" alt="">
-											</div>
-											<span>Подписка IVI <br>на 3 месяца</span>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td class="desktop-visible">Александр Р.</td>
-									<td class="desktop-visible">+7 (***) ***-4563</td>
-									<td class="desktop-visible">10.07.2020</td>
-									<td class="mobile-visible">
-										<div class="winner-info">
-											<div class="winner-name">Александр Р.</div>
-											<div>
-												+7 (***) ***-4563 <br>
-												10.07.2020
-											</div>
-										</div>
-									</td>
-									<td>
-										<div class="win-info">
-											<div class="win-img">
-												<img src="img/prizes/lamoda.png" alt="">
-											</div>
-											<span>Сертификат Lamoda <br>на 1000₽</span>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td class="desktop-visible">Александр Р.</td>
-									<td class="desktop-visible">+7 (***) ***-4563</td>
-									<td class="desktop-visible">10.07.2020</td>
-									<td class="mobile-visible">
-										<div class="winner-info">
-											<div class="winner-name">Александр Р.</div>
-											<div>
-												+7 (***) ***-4563 <br>
-												10.07.2020
-											</div>
-										</div>
-									</td>
-									<td>
-										<div class="win-info">
-											<div class="win-img">
-												<img src="img/prizes/sportmaster.png" alt="">
-											</div>
-											<span>Сертификат Спортмастер <br>на 1000₽</span>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td class="desktop-visible">Александр Р.</td>
-									<td class="desktop-visible">+7 (***) ***-4563</td>
-									<td class="desktop-visible">10.07.2020</td>
-									<td class="mobile-visible">
-										<div class="winner-info">
-											<div class="winner-name">Александр Р.</div>
-											<div>
-												+7 (***) ***-4563 <br>
-												10.07.2020
-											</div>
-										</div>
-									</td>
-									<td>
-										<div class="win-info">
-											<div class="win-img">
-												<img src="img/prizes/ozon.png" alt="">
-											</div>
-											<span>Сертификат OZON <br>на 1000₽</span>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td class="desktop-visible">Александр Р.</td>
-									<td class="desktop-visible">+7 (***) ***-4563</td>
-									<td class="desktop-visible">10.07.2020</td>
-									<td class="mobile-visible">
-										<div class="winner-info">
-											<div class="winner-name">Александр Р.</div>
-											<div>
-												+7 (***) ***-4563 <br>
-												10.07.2020
-											</div>
-										</div>
-									</td>
-									<td>
-										<div class="win-info">
-											<div class="win-img">
-												<img src="img/prizes/ivi.png" alt="">
-											</div>
-											<span>Подписка IVI <br>на 3 месяца</span>
-										</div>
+										<img src="img/waiting.svg" alt="">
 									</td>
 								</tr>
 							</tbody>
